# IRClaude

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
irclaude/: __main__.py  bootstrap.py  cli.py  config.py  db.py  digest.py  mcp_server.py  models.py
irclaude/bridge/: __init__.py  agents.py  claude_runner.py  codeblock.py  core.py  ergo_config.py  ergo_fetch.py  event_translator.py  markdown.py  preflight.py  router.py  server.py  session_setup.py  weechat_link.py
irclaude/irc/: client.py  protocol.py
irclaude/services/: memory_service.py  project_registry.py
myorch/: __main__.py  app.py  bootstrap.py  cli.py  config.py  db.py  digest.py  mcp_server.py
myorch/bridge/: __init__.py  agents.py  claude_runner.py  codeblock.py  core.py  ergo_config.py  event_translator.py  router.py  session_setup.py  weechat_link.py
tests/: conftest.py  test_agents.py  test_app_smoke.py  test_bootstrap.py  test_bridge_control_protocol.py  test_bridge_server.py  test_bridge_signal.py  test_bridge_smoke.py  test_claude_runner.py  test_claude_runner_timeout.py  test_claude_runner_uuid.py  test_cli_data.py  test_cli_lifecycle.py  test_cli_setup.py  test_cli_skeleton.py  test_cli_up.py  test_codeblock.py  test_config.py  test_db.py  test_db_fts.py  test_dev_server_manager.py  test_digest.py  test_ergo_config.py  test_ergo_fetch.py  test_event_translator.py  test_event_translator_agents.py  test_idle_close.py  test_irc_client_connect.py  test_irc_client_join.py  test_irc_client_roundtrip.py  test_irc_messages_encode.py  test_irc_messages_parse.py  test_irc_protocol.py  test_markdown.py  test_mcp_server.py  test_mcp_server_stdio.py  test_memory_service_memory.py  test_memory_service_projects.py  test_memory_service_sessions.py  test_models.py  (+24 more)
weechat_plugin/: README.md  irclaude.py  myorch.py
(+26 files in other folders)
