[project]
name = "irclaude"
version = "2.0.0"
description = "Local IRC-driven orchestrator for multi-project Claude Code sessions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Pena" }]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "pygments>=2.17",
  "tabulate>=0.9",
  "anyio>=4.3",
  "mcp>=1.0",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
irclaude = "irclaude.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["irclaude*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
